--- a/index.html
+++ b/index.html
@@ -1,68 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Livvic:wght@600;700&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Livvic:wght@600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="CSS/mainstyle2.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="Header_nav">
-
-        </div>
-        <div class="Header_banner">
-
-        </div>
+      <div class="Header_nav"></div>
+      <div class="Header_banner"></div>
     </header>
     <main>
-        <section class="Main_1">
-            <div class="Main_name1">
-
-            </div>
-            <div class="Main_description">
-                
-            </div>
-        </section>
-        <section class="Main_2">
-            <div class="Main_name1">
-
-            </div>
-            <div class="Main_description">
-                <div class="description"></div>
-                <div class="description"></div>
-                <div class="description"></div>
-            </div>
-        </section>
+      <section class="Main_1">
+        <div class="Main_name1"></div>
+        <div class="Main_description"></div>
+      </section>
+      <section class="Main_2">
+        <div class="Main_name1">
+          <h2>
+            Delivering real results for top companies. Some of our success
+            stories.
+          </h2>
+        </div>
+        <div class="Main_description_2">
+          <div class="description-kady">
+            <p>
+              “The team perfectly fit the specialized skill set required. They
+              focused on the most essential features helping us launch the
+              platform eight months faster than planned.”
+            </p>
+            <h5>Kady Baker</h5>
+            <p>Product Manager at Bookmark</p>
+            <img src="IMG/avatar-kady.jpg" alt="Kady_Baker" />
+          </div>
+          <div class="description-aiysha">
+            <p>
+              “We needed to automate our entire onboarding process. The team
+              came in and built out the whole journey. Since going live, user
+              retention has gone through the roof!”
+            </p>
+            <h5>Aiysha Reese</h5>
+            <p>Founder of Manage</p>
+            <img src="IMG/avatar-aiysha.jpg" alt="Aiysha_Reese" />
+          </div>
+          <div class="description-arthur"><p>
+            “Amazing. Our team helped us build an app that delivered a new experience 
+            for hiring a physio. The launch was an instant success with 100k downloads
+             in the first month.”
+          </p>
+          <h5>Arthur Clarke</h5>
+          <p>Co-founder of MyPhysio</p>
+          <img src="IMG/avatar-arthur.jpg" alt="Arthur_Clarke" />
+        </div></div>
+        </div>
+      </section>
     </main>
     <footer>
-        <section class="footer_1">
-            <div class="footer_text">
-
-            </div>
-            <div class="footer_button">
-
-            </div>
-        </section>
-        <section class="footer_2">
-            <div class="footer_nav">
-
-            </div>
-            <div class="footer_info">
-
-            </div>
-            <div class="footer_links">
-
-            </div>
-            <div class="footer_copyright">
-
-            </div>
-        </section>
+      <section class="footer_1">
+        <div class="footer_text"></div>
+        <div class="footer_button"></div>
+      </section>
+      <section class="footer_2">
+        <div class="footer_nav"></div>
+        <div class="footer_info"></div>
+        <div class="footer_links"></div>
+        <div class="footer_copyright"></div>
+      </section>
     </footer>
-    <button class="btn primary_btn-dark">contact us</button>
-</body>
+    <!-- <button class="btn primary_btn-dark">contact us</button> -->
+  </body>
 </html>
