--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
         </div>
         <div class="Header_banner">
-
+            <h2 class="h1_large h2_title">
+                Find the<br> best <p class="red">talent</p> 
+            </h2>
+                <p class="body_2 p_header">Finding the right people and building high<br> performing teams can be hard. Most companies<br> aren’t tapping into the abundance of global talent. <br> We’re about to change that.</p>
         </div>
     </header>
     <main>
@@ -63,6 +66,5 @@
             </div>
         </section>
     </footer>
-    <button class="btn primary_btn-dark">contact us</button>
 </body>
 </html>
