--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 </head>
 <body>
     <header>
-        <div class="Header_nav">
-
+        <div class="header_nav">
+            <div class="header_nav_links">
+                <h2 class="h2 nav_h2">talent<h2>
+                <a class="nav link nav_word body_2" href="#">home</a> <a class="nav link nav_word body_2" href="#">About</a> 
+                <a class="btn primary_btn-light header-right body_2" href="#">contact us</a> 
+            </div>
+            
         </div>
         <div class="Header_banner">
 
@@ -63,6 +68,5 @@
             </div>
         </section>
     </footer>
-    <button class="btn primary_btn-dark">contact us</button>
 </body>
 </html>
