--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Livvic:wght@600;700&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Livvic:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/mainstyle2.css" />
     <title>Document</title>
   </head>
@@ -25,10 +26,10 @@
         <div class="Main_description"></div>
       </section>
       <section class="Main_2">
-        <div class="Main_name1">
+        <div class="Main_name2">
           <h2>
-            Delivering real results for top companies. Some of our success
-            stories.
+            Delivering real results for top <br> companies. Some of our <span class="color"> success
+            stories.</span>
           </h2>
         </div>
         <div class="Main_description_2">
@@ -39,8 +40,8 @@
               platform eight months faster than planned.”
             </p>
             <h5>Kady Baker</h5>
-            <p>Product Manager at Bookmark</p>
-            <img src="IMG/avatar-kady.jpg" alt="Kady_Baker" />
+            <div class="characterization">Product Manager at Bookmark</div>
+            <div class="photo"><img src="IMG/avatar-kady.jpg" alt="Kady_Baker" /></div>
           </div>
           <div class="description-aiysha">
             <p>
@@ -49,8 +50,8 @@
               retention has gone through the roof!”
             </p>
             <h5>Aiysha Reese</h5>
-            <p>Founder of Manage</p>
-            <img src="IMG/avatar-aiysha.jpg" alt="Aiysha_Reese" />
+            <div class="characterization">Founder of Manage</div>
+            <div class="photo"><img src="IMG/avatar-aiysha.jpg" alt="Aiysha_Reese" /></div>
           </div>
           <div class="description-arthur"><p>
             “Amazing. Our team helped us build an app that delivered a new experience 
@@ -58,8 +59,8 @@
              in the first month.”
           </p>
           <h5>Arthur Clarke</h5>
-          <p>Co-founder of MyPhysio</p>
-          <img src="IMG/avatar-arthur.jpg" alt="Arthur_Clarke" />
+          <div class="characterization">Co-founder of MyPhysio</div>
+          <div class="photo"><img src="IMG/avatar-arthur.jpg" alt="Arthur_Clarke" /></div>
         </div></div>
         </div>
       </section>
