--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
   </head>
   <body>
     <header>
-        <div class="header_nav">
-            <div class="header_nav_links">
-                <h2 class="h2 nav_h2">talent<h2>
-                <a class="nav link nav_word body_2" href="#">home</a> <a class="nav link nav_word body_2" href="#">About</a> 
-                <a class="btn primary_btn-light header-right body_2" href="#">contact us</a> 
+      <div class="header_nav">
+        <div class="header_nav_links">
+            <div class="left_header">
+              <h2 class="h2 nav_h2">talent<h2></h2>
+              <a class="nav link nav_word body_2" href="#">home</a>
+              <a class="nav link nav_word body_2" href="#">About</a>
             </div>
+            <div class="right_header">
+              <a class=" btn primary_btn-light body_2" href="#">contact us</a>
+            </div>
+        </div>
             
         </div>
         <div class="Header_banner">
