--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="left_header">
               <h2 class="h2 nav_h2">talent<h2></h2>
               <a class="nav link nav_word body_2" href="#">home</a>
-              <a class="nav link nav_word body_2" href="#">About</a>
+              <a class="nav link nav_word body_2" href="#">about</a>
             </div>
             <div class="right_header">
               <a class=" btn primary_btn-light body_2" href="#">contact us</a>
