--- a/Pages/about.html
+++ b/Pages/about.html
@@ -1,68 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="../CSS/aboutHeader.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="Header_nav">
-
-        </div>
-        <div class="Header_main">
-
-        </div>
+      <div class="Header_nav"></div>
+      <div class="Header_main">
+        <h1>About</h1>
+        <p>
+          We help companies build dynamic teams made up of top global talent.
+          Using our network of passionate professionals we drive innovation and
+          deliver incredible outcomes. Talented, diverse teams shape the best
+          products and experiences. We’ll bring those teams to you.
+        </p>
+      </div>
     </header>
     <main>
-        <section class="Main_1">
-            <div class="Main_name1">
-
-            </div>
-            <div class="Main_peoplxe">
-                <div class="Main_box"></div>
-                <div class="Main_box"></div>
-                <div class="Main_box"></div>
-                <div class="Main_box"></div>
-                <div class="Main_box"></div>
-                <div class="Main_box"></div>
-            </div>
-        </section>
-        <section class="Main_2">
-            <div class="Main_clients">
-
-            </div>
-            <div class="Main_img"></div>
-            <div class="Main_img"></div>
-            <div class="Main_img"></div>
-            <div class="Main_img"></div>
-            <div class="Main_img"></div>
-        </section>
+      <section class="Main_1">
+        <div class="Main_name1"></div>
+        <div class="Main_peoplxe">
+          <div class="Main_box"></div>
+          <div class="Main_box"></div>
+          <div class="Main_box"></div>
+          <div class="Main_box"></div>
+          <div class="Main_box"></div>
+          <div class="Main_box"></div>
+        </div>
+      </section>
+      <section class="Main_2">
+        <div class="Main_clients"></div>
+        <div class="Main_img"></div>
+        <div class="Main_img"></div>
+        <div class="Main_img"></div>
+        <div class="Main_img"></div>
+        <div class="Main_img"></div>
+      </section>
     </main>
     <footer>
-        <section class="footer_1">
-            <div class="footer_text">
-
-            </div>
-            <div class="footer_button">
-
-            </div>
-        </section>
-        <section class="footer_2">
-            <div class="footer_nav">
-
-            </div>
-            <div class="footer_info">
-
-            </div>
-            <div class="footer_links">
-
-            </div>
-            <div class="footer_copyright">
-                
-            </div>
-        </section>
+      <section class="footer_1">
+        <div class="footer_text"></div>
+        <div class="footer_button"></div>
+      </section>
+      <section class="footer_2">
+        <div class="footer_nav"></div>
+        <div class="footer_info"></div>
+        <div class="footer_links"></div>
+        <div class="footer_copyright"></div>
+      </section>
     </footer>
-</body>
+  </body>
 </html>
