--- a/Pages/about.html
+++ b/Pages/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="authors"
+      content="Aleksandr Tarejev, Ugnė Adomaitytė, Slavomir Michailin, "
+    />
     <link rel="stylesheet" href="../CSS/style.css" />
     <link rel="stylesheet" href="../CSS/aboutHeader.css" />
     <title>Document</title>
