--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="CSS/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta name="authors" content="Aleksandr Tarejev, Ugnė Adomaitytė, Slavomir Michailin, ">
     <link
       href="https://fonts.googleapis.com/css2?family=Livvic:wght@600;700&display=swap"
       rel="stylesheet"
