fix home-main1 bugs

--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
                 </div>
                 <div class="home_main-1_description_container">
                     <div class="home_main-1_description_box">
-                        <img class="home_main-1_description_icon" src="IMG/icon-person.svg" alt="person icon">
+                        <img class="home_main-1_description_icon home_main-1_description_icon-1" src="IMG/icon-person.svg" alt="person icon">
                         <div>
                             <h3 class="h3">Experienced Individuals</h3>
                             <p class="body_2">Our network is made up of highly experienced professionals who are passionate about what they do.</p>
                         </div>
                     </div>
                     <div class="home_main-1_description_box">
-                        <img class="home_main-1_description_icon" src="IMG/icon-cog.svg" alt="person icon">
+                        <img class="home_main-1_description_icon" src="IMG/icon-cog.svg" alt="cog icon">
                         <div>
                             <h3 class="h3">Easy to Implement</h3>
                             <p class="body_2">Our processes have been refined over years of implementation meaning our teams always deliver.</p>
                         </div>
                     </div>
                     <div class="home_main-1_description_box">
-                        <img class="home_main-1_description_icon" src="IMG/icon-chart.svg" alt="person icon">
+                        <img class="home_main-1_description_icon" src="IMG/icon-chart.svg" alt="chart icon">
                         <div>
                             <h3 class="h3">Enhanced Productivity</h3>
                             <p class="body_2">Our customized platform with in-built analytics helps you manage your distributed teams.</p>
