added footer section 1

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
     </main>
     <footer>
       <section class="footer_1">
-        <div class="footer_text"></div>
-        <div class="footer_button"></div>
+        <div class="h1_small footer_h2">Ready to get started?</div>
+        <input type="button" value="contact us" class="btn primary_btn-dark c">
       </section>
       <section class="footer_2">
         <div class="footer_nav"></div>
