--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <div class="header_nav_links">
             <div class="left_header">
               <h2 class="h2 nav_h2">talent<h2></h2>
-              <a class="nav link nav_word body_2" href="#">home</a>
-              <a class="nav link nav_word body_2" href="#">about</a>
+              <a class="nav link nav_word body_2" href="index.html">home</a>
+              <a class="nav link nav_word body_2" href="Pages/about.html">about</a>
             </div>
             <div class="right_header">
-              <a class=" btn primary_btn-light body_2" href="#">contact us</a>
+              <a class=" btn primary_btn-light body_2" href="Pages/contact.html">contact us</a>
             </div>
         </div>
             
