--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -9,9 +9,18 @@
 </head>
 <body>
     <header>
-        <div class="Header_nav">
-
-        </div>
+        <div class="header_nav">
+            <div class="header_nav_links">
+                <div class="left_header">
+                  <h2 class="h2 nav_h2">talent<h2></h2>
+                  <a class="nav link nav_word body_2" href="../index.html">home</a>
+                  <a class="nav link nav_word body_2" href="about.html">about</a>
+                </div>
+                <div class="right_header">
+                  <a class=" btn primary_btn-light body_2" href="contact.html">contact us</a>
+                </div>
+            </div>
+          </div>
         <div class="Header_main">
 
         </div>
