Add background patterns

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -4,19 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="authors"
-      content="Aleksandr Tarejev, Ugnė Adomaitytė, Slavomir Michailin, "
-    />
-    <link rel="stylesheet" href="../CSS/style.css" />
-    <link rel="stylesheet" href="../CSS/aboutHeader.css" />
+    <meta name="authors" content="Aleksandr Tarejev, Ugnė Adomaitytė, Slavomir Michailin, "/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Livvic:wght@600;700&display=swap"
-      rel="stylesheet"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Livvic:wght@600;700&display=swap"/>
     <link href="https://fonts.googleapis.com/css2?family=Livvic:ital,wght@1,300&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="../CSS/aboutHeader.css" />
+    <title>About Page</title>
   </head>
   <body>
     <header>
@@ -24,22 +19,26 @@
         <div class="header_nav_links">
             <div class="left_header">
               <h2 class="h2 nav_h2">talent<h2></h2>
-              <a class="nav link nav_word body_2" href="../index.html">home</a>
-              <a class="nav link nav_word body_2" href="about.html">about</a>
+              <a class="nav link nav_word body_1" href="../index.html">home</a>
+              <a class="nav link nav_word body_1" href="about.html">about</a>
             </div>
             <div class="right_header">
-              <a class=" btn primary_btn-light body_2" href="contact.html">contact us</a>
+              <a class=" btn primary_btn-light body_1" href="contact.html">contact us</a>
             </div>
         </div>
       </div>
       <div class="Header_main">
+        <img class="bg-pattern-about-1-mobile-nav-1" src="../IMG/bg-pattern-about-1-mobile-nav-1.svg" alt="background pattern">
         <h1>About</h1>
-        <p>
-          We help companies build dynamic teams made up of top global talent.
-          Using our network of passionate professionals we drive innovation and
-          deliver incredible outcomes. Talented, diverse teams shape the best
-          products and experiences. We’ll bring those teams to you.
-        </p>
+        <div>
+          <hr class="about_banner_section_divider"></hr>
+          <p>
+            We help companies build dynamic teams made up of top global talent.
+            Using our network of passionate professionals we drive innovation and
+            deliver incredible outcomes. Talented, diverse teams shape the best
+            products and experiences. We’ll bring those teams to you.
+          </p>
+        </div>
       </div>
     </header>   
     <main>
@@ -57,6 +56,7 @@
             </div>
         </section>
         <section class="about-main_2">
+            <img class="bg-pattern-about-4" src="../IMG/bg-pattern-about-4.svg" alt="background pattern">
             <h2 class="about-main_clients h2">Some of our clients</h2>
             <div class="about-img_container">
                 <div><img class="about-img_about" src="../IMG/logo-the-verge.png" alt="The verge"></div>
@@ -69,9 +69,10 @@
     </main>
     <footer>
       <section class="footer_1">
+        <img class="bg-pattern-home-6-about-5" src="../IMG/bg-pattern-home-6-about-5.svg" alt="background pattern">
         <div class="h2 footer_h2">Ready to get started?</div>
         <div>
-          <a class=" btn primary_btn-dark " href="Pages/contact.html">contact us</a>
+          <a class=" btn primary_btn-dark body_1" href="contact.html">contact us</a>
         </div>
       </section>
       <section class="footer_2">
