--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="CSS/style.css" />
+    <meta name="authors" content="Aleksandr Tarejev, Ugnė Adomaitytė, Slavomir Michailin, ">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <meta name="authors" content="Aleksandr Tarejev, Ugnė Adomaitytė, Slavomir Michailin, ">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Livvic:wght@600;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Livvic:wght@600;700&display=swap"/>
     <link href="https://fonts.googleapis.com/css2?family=Livvic:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="CSS/style.css" />
     <link rel="stylesheet" href="CSS/mainstyle2.css" />
-    <title>Document</title>
+    <title>Home Page</title>
   </head>
   <body>
     <header>
@@ -22,11 +19,11 @@
         <div class="header_nav_links">
             <div class="left_header">
               <h2 class="h2 nav_h2">talent<h2></h2>
-              <a class="nav link nav_word body_2" href="index.html">home</a>
-              <a class="nav link nav_word body_2" href="Pages/about.html">about</a>
+              <a class="nav link nav_word body_1" href="index.html">home</a>
+              <a class="nav link nav_word body_1" href="Pages/about.html">about</a>
             </div>
             <div class="right_header">
-              <a class=" btn primary_btn-light body_2" href="Pages/contact.html">contact us</a>
+              <a class=" btn primary_btn-light body_1" href="Pages/contact.html">contact us</a>
             </div>
         </div>
             
@@ -115,7 +112,7 @@
             <p>
             “Amazing. Our team helped us build an app that delivered a new experience 
             for hiring a physio. The launch was an instant success with 100k downloads
-             in the first month.”
+            in the first month.”
           </p>
           <h5>Arthur Clarke</h5>
           <div class="characterization">Co-founder of MyPhysio</div>
@@ -126,9 +123,10 @@
     </main>
     <footer>
       <section class="footer_1">
+        <img class="bg-pattern-home-6-about-5" src="IMG/bg-pattern-home-6-about-5.svg" alt="background pattern">
         <div class="h2 footer_h2">Ready to get started?</div>
         <div>
-          <a class=" btn primary_btn-dark " href="Pages/contact.html">contact us</a>
+          <a class=" btn primary_btn-dark body_1" href="Pages/contact.html">contact us</a>
         </div>
       </section>
       <section class="footer_2">
