--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -5,24 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="authors" content="Aleksandr Tarejev, Ugnė Adomaitytė, Slavomir Michailin, ">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Livvic:wght@600;700&display=swap"/>
+    <link href="https://fonts.googleapis.com/css2?family=Livvic:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <title>Contact Page</title>
 </head>
 <body>
     <header>
         <div class="header_nav">
             <div class="header_nav_links">
                 <div class="left_header">
-                  <h2 class="h2 nav_h2">talent<h2></h2>
-                  <a class="nav link nav_word body_2" href="../index.html">home</a>
-                  <a class="nav link nav_word body_2" href="about.html">about</a>
+                    <h2 class="h2 nav_h2">talent<h2></h2>
+                    <a class="nav link nav_word body_2" href="../index.html">home</a>
+                    <a class="nav link nav_word body_2" href="about.html">about</a>
                 </div>
                 <div class="right_header">
-                  <a class=" btn primary_btn-light body_2" href="contact.html">contact us</a>
+                    <a class=" btn primary_btn-light body_2" href="contact.html">contact us</a>
                 </div>
             </div>
-          </div>
+        </div>
         <div class="Header_main">
-
+            
         </div>
     </header>
     <main>
