--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ best <p class="red">talent</p>
               platform eight months faster than planned.”
             </p>
             <h5>Kady Baker</h5>
-            <div class="characterization">Product Manager at Bookmark</div>
+            <div class="characterization size_main2">Product Manager at Bookmark</div>
             <div class="photo"><img src="IMG/avatar-kady.jpg" alt="Kady_Baker" /></div>
           </div>
           <div class="description-aiysha">
@@ -117,7 +117,7 @@ best <p class="red">talent</p>
               retention has gone through the roof!”
             </p>
             <h5>Aiysha Reese</h5>
-            <div class="characterization">Founder of Manage</div>
+            <div class="characterization size_main2">Founder of Manage</div>
             <div class="photo"><img src="IMG/avatar-aiysha.jpg" alt="Aiysha_Reese" /></div>
           </div>
           <div class="description-arthur">
@@ -128,7 +128,7 @@ best <p class="red">talent</p>
             in the first month.”
           </p>
           <h5>Arthur Clarke</h5>
-          <div class="characterization">Co-founder of MyPhysio</div>
+          <div class="characterization size_main2">Co-founder of MyPhysio</div>
           <div class="photo"><img src="IMG/avatar-arthur.jpg" alt="Arthur_Clarke" /></div>
         </div></div>
         </div>
