--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Livvic:wght@600;700&display=swap"/>
     <link href="https://fonts.googleapis.com/css2?family=Livvic:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/footer.css">
     <title>Contact Page</title>
 </head>
 <body>
@@ -51,6 +52,45 @@
                 
             </div>
         </section>
+        <section class="footer-section-2">
+			<div class="col1_col2">
+				<div class="col-1">
+					<div>
+						<h2 class="h2">talent</h2>
+					</div>
+					<div class="body_1 links">
+						<a href="../index.html">home</a>
+						<a href="about.html">about</a>
+					</div>
+				</div>
+				<div class="col-2 body_2">
+					<p>987 Hillcrest Lane<br>
+						Irvine, CA<br>
+						California 92714<br>
+						Call us: 949-833-7432<br>
+					</p>
+				</div>
+			</div>
+			<div class="col-3">
+				<div class="icons">
+					<a href="https://facebook.com">
+						<ion-icon name="logo-facebook"></ion-icon>
+						<i class="fa-brands fa-facebook-f"></i>
+
+						<a href="https://pinterest.com">
+							<ion-icon class="icon" name="logo-pinterest"></ion-icon>
+						</a>
+						<a href="https://twitter.com">
+							<ion-icon class="icon" name="logo-twitter"></ion-icon>
+						</a>
+				</div>
+				<div class="copyright">
+					<h3 class="body_2">Copyright 2022.All Rights Reserved</h3>
+				</div>
+			</div>
+		</section>
     </footer>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
