--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
 						<h2 class="h2">talent</h2>
 					</div>
 					<div class="body_1 links">
-						<a href="default.asp" target="_blank">home</a>
-						<a href="default.asp" target="_blank">about</a>
+						<a href="index.html">home</a>
+						<a href="Pages/about.html">about</a>
 					</div>
 				</div>
 				<div class="col-2 body_2">
