--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 			<div>
 				<hr class="home_banner_section_divider">
 				</hr>
-				<p class="body_2 p_header">Finding the right people and building high<br> performing teams can
+				<p class="body_2 p_header">Finding the right people and building high performing teams can
 					be hard. Most
-					companies<br> aren’t tapping into the abundance of global talent. <br> We’re about to
+					companies aren’t tapping into the abundance of global talent. We’re about to
 					change that.</p>
 			</div>
 
@@ -100,6 +100,7 @@
 						stories.</span>
 				</h2>
 			</div>
+			
 			<div class="Main_description_2">
 				<div class="description-kady">
 					<img class="main_2_quotes" src="IMG/icon-quotes.svg" alt="quotes image">
