--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -18,7 +18,7 @@
         <div class="header_nav">
             <div class="header_nav_links">
                 <div class="left_header">
-                    <h2 class="h2 nav_h2">talent<h2></h2>
+                    <h2 class="h2 nav_h2">talent</h2>
                     <a class="nav link nav_word body_2" href="../index.html">home</a>
                     <a class="nav link nav_word body_2" href="about.html">about</a>
                 </div>
@@ -28,28 +28,45 @@
             </div>
         </div>
         <div class="Header_main">
-            
         </div>
     </header>
-    <main>
-    <div class="Main_name"></div>
-    <div class="Main.description"></div>
-    <div class="form">
-    </main>
+    <main class="main_contact_us">
+    <div class="Main_name h1_small">Contact</div>
+    <div class="Main_description">Ask us abaut</div>
+    <div class="Main_description_p">
+        <div class="Main_description_p_1">
+            <img class="home_main-1_description_icon" src="../IMG/icon-person.svg" alt="person icon">
+        <p class="Main_description_p h3">The quality of our talent network</p>
+        </div>
+        <div class="Main_description_p_1">
+            <img class="home_main-1_description_icon" src="../IMG/icon-cog.svg" alt="person icon">
+        <p class="Main_description_p h3">Usage & implementation of our software</p>
+        </div>
+        <div class="Main_description_p_1">
+            <img class="home_main-1_description_icon" src="../IMG/icon-chart.svg" alt="person icon">
+        <p class="Main_description_p h3">How we help drive innovation</p>
+        </div>
     </div>
+    <div class="form">
+        <form class="forms_1">
+            <input type="text" name="name" class="form_inputs" placeholder="Name" required>
+            <input type="email" name="name" class="form_inputs" placeholder="Email Address" required>
+            <input type="text" name="name" class="form_inputs" placeholder="Company Name" required>
+            <input type="text" name="name" class="form_inputs" placeholder="Title" required>
+            <input type="text" name="name" class="form_inputs Message" placeholder="Message" required>
+            <div><input type="submit" value="Submit" class="primary_btn-light:hover btn submit"></div>
+        </form>
+    </div>
+    </main>
     <footer>
         <section class="footer_2">
             <div class="footer_nav">
-
             </div>
             <div class="footer_info">
-
             </div>
             <div class="footer_links">
-
             </div>
             <div class="footer_copyright">
-                
             </div>
         </section>
         <section class="footer-section-2">
