--- a/Pages/about.html
+++ b/Pages/about.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../CSS/style.css" />
     <link rel="stylesheet" href="../CSS/aboutHeader.css" />
     <link rel="stylesheet" href="../CSS/footer.css">
+    <link rel="stylesheet" href="../CSS/aboutMain1.css">
     <title>About Page</title>
   </head>
   <body>
@@ -19,7 +20,7 @@
       <div class="header_nav">
         <div class="header_nav_links">
             <div class="left_header">
-              <h2 class="h2 nav_h2">talent<h2></h2>
+              <h2 class="h2 nav_h2">talent</h2>
               <a class="nav link nav_word body_1" href="../index.html">home</a>
               <a class="nav link nav_word body_1" href="about.html">about</a>
             </div>
@@ -43,19 +44,64 @@
       </div>
     </header>   
     <main>
-        <section class="Main_1">
-            <div class="Main_name1">
+      <section class="Main_1">
+        <div class="Main_name1">
 
+        </div>
+        <div class="Main_people">
+          <h2>Meet the directors</h2>
+            <div class="people_container">
+              <div class="box-nikita">
+                <img src="../IMG/avatar-nikita.jpg" alt="Nikita Marks">
+                <div class="name"><p>Nikita Marks</p></div>
+                <div class="job">Founder & CEO</div>
+                <div class="description"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
+                <button><div class="rectangle"></div>
+                  <div class="rectangle-copy"></div></button>
+              </div>
+              <div class="box-christian">
+                <img src="../IMG/avatar-christian.jpg" alt="Cristian Duncan">
+                <div class="name"><p>Cristian Duncan</p></div>
+                <div class="job">Co-founder & COO</div>
+                <div class="description"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
+                <button><div class="rectangle"></div>
+                  <div class="rectangle-copy"></div></button>
+              </div>
+              <div class="box-cruz">
+                <img src="../IMG/avatar-cruz.jpg" alt="Cruz Hamer">
+                <div class="name"><p>Cruz Hamer</p></div>
+                <div class="job">Co-founder & CTO</div>
+                <div class="description"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
+                <button><div class="rectangle"></div>
+                  <div class="rectangle-copy"></div></button>
+              </div>
+              <div class="box-drake">
+                <img src="../IMG/avatar-drake.jpg" alt="Drake Heaton">
+                <div class="name"><p>Drake Heaton</p></div>
+                <div class="job">Business Development Lead</div>
+                <div class="description"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
+                <button><div class="rectangle"></div>
+                  <div class="rectangle-copy"></div></button>
+              </div>
+              <div class="box-griffin">
+                <img src="../IMG/avatar-griffin.jpg" alt="Griffin Wise">
+                <div class="name"><p>Griffin Wise</p></div>
+                <div class="job">Lead Marketing</div>
+                <div class="description"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
+                <button><div class="rectangle"></div>
+                  <div class="rectangle-copy"></div></button>
+              </div>
+              <div class="box-aden">
+                <img src="../IMG/avatar-aden.jpg" alt="Aden Allan">
+                <div class="name"><p>Aden Allan</p></div>
+                <div class="job">Lorem ipsum</div>
+                <div class="description"><p>“Empowered teams create truly amazing products. Set the north star and let them follow it.”</p> </div>
+                <button><div class="rectangle"></div>
+                  <div class="rectangle-copy"></div></button>
+              </div>
             </div>
-            <div class="Main_peoplxe">
-                <div class="Main_box"></div>
-                <div class="Main_box"></div>
-                <div class="Main_box"></div>
-                <div class="Main_box"></div>
-                <div class="Main_box"></div>
-                <div class="Main_box"></div>
-            </div>
-        </section>
+        </div>
+    </section>
         <section class="about-main_2">
             <img class="bg-pattern-about-4" src="../IMG/bg-pattern-about-4.svg" alt="background pattern">
             <h2 class="about-main_clients h2">Some of our clients</h2>
