--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -18,7 +18,7 @@
         <div class="header_nav">
             <div class="header_nav_links">
                 <div class="left_header">
-                    <h2 class="h2 nav_h2">talent<h2></h2>
+                    <h2 class="h2 nav_h2">talent</h2>
                     <a class="nav link nav_word body_2" href="../index.html">home</a>
                     <a class="nav link nav_word body_2" href="about.html">about</a>
                 </div>
