--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="header_nav">
 			<div class="header_nav_links">
 				<div class="left_header">
-					<h2 class="h2 nav_h2">talent<h2></h2>
+					<h2 class="h2 nav_h2">talent</h2>
 						<a class="nav link nav_word body_1" href="index.html">home</a>
 						<a class="nav link nav_word body_1" href="Pages/about.html">about</a>
 				</div>
