--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -31,44 +31,40 @@
         </div>
     </header>
     <main class="main_contact_us">
-    <div class="Main_name h1_small">Contact</div>
-    <div class="Main_description">Ask us abaut</div>
-    <div class="Main_description_p">
-        <div class="Main_description_p_1">
-            <img class="home_main-1_description_icon" src="../IMG/icon-person.svg" alt="person icon">
-        <p class="Main_description_p h3">The quality of our talent network</p>
-        </div>
-        <div class="Main_description_p_1">
-            <img class="home_main-1_description_icon" src="../IMG/icon-cog.svg" alt="person icon">
-        <p class="Main_description_p h3">Usage & implementation of our software</p>
-        </div>
-        <div class="Main_description_p_1">
-            <img class="home_main-1_description_icon" src="../IMG/icon-chart.svg" alt="person icon">
-        <p class="Main_description_p h3">How we help drive innovation</p>
+    <div class="abaut_text">
+        <div class="column1">
+        <div class="Main_name h1_small ">Contact</div>
+        <div class="Main_description ">Ask us about</div>
+        <div class="Main_description_p ">
+            <div class="Main_description_p_1">
+                <img class="home_main-1_description_icon" src="../IMG/icon-person.svg" alt="person icon">
+            <p class="Main_description_p h3">The quality of our talent network</p>
+            </div>
+            <div class="Main_description_p_1">
+                <img class="home_main-1_description_icon" src="../IMG/icon-cog.svg" alt="person icon">
+            <p class="Main_description_p h3">Usage & implementation of our software</p>
+            </div>
+            <div class="Main_description_p_1">
+                <img class="home_main-1_description_icon" src="../IMG/icon-chart.svg" alt="person icon">
+            <p class="Main_description_p h3">How we help drive innovation</p>
+            </div>
         </div>
     </div>
-    <div class="form">
-        <form class="forms_1">
-            <input type="text" name="name" class="form_inputs" placeholder="Name" required>
-            <input type="email" name="name" class="form_inputs" placeholder="Email Address" required>
-            <input type="text" name="name" class="form_inputs" placeholder="Company Name" required>
-            <input type="text" name="name" class="form_inputs" placeholder="Title" required>
-            <input type="text" name="name" class="form_inputs Message" placeholder="Message" required>
-            <div><input type="submit" value="Submit" class="primary_btn-light:hover btn submit"></div>
-        </form>
+</div>
+<div= class="column2">
+        <div class="form ">
+            <form class="forms_1">
+                <input type="text" name="name" class="form_inputs" placeholder="Name" required>
+                <input type="email" name="name" class="form_inputs" placeholder="Email Address" required>
+                <input type="text" name="name" class="form_inputs" placeholder="Company Name" required>
+                <input type="text" name="name" class="form_inputs" placeholder="Title" required>
+                <input type="text" name="name" class="form_inputs Message" placeholder="Message" required>
+                <div class="knopka"><input type="submit" value="Submit" class="primary_btn-light:hover btn submit"></div>
+            </form>
+        </div>
     </div>
     </main>
     <footer>
-        <section class="footer_2">
-            <div class="footer_nav">
-            </div>
-            <div class="footer_info">
-            </div>
-            <div class="footer_links">
-            </div>
-            <div class="footer_copyright">
-            </div>
-        </section>
         <section class="footer-section-2">
 			<div class="col1_col2">
 				<div class="col-1">
@@ -84,7 +80,7 @@
 					<p>987 Hillcrest Lane<br>
 						Irvine, CA<br>
 						California 92714<br>
-						Call us: 949-833-7432<br>
+						Call us : 949-833-7432<br>
 					</p>
 				</div>
 			</div>
@@ -102,7 +98,7 @@
 						</a>
 				</div>
 				<div class="copyright">
-					<h3 class="body_2">Copyright 2022.All Rights Reserved</h3>
+					<h3 class="body_2">Copyright 2022. All Rights Reserved</h3>
 				</div>
 			</div>
 		</section>
