--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -59,7 +59,7 @@
                 <input type="text" name="name" class="form_inputs" placeholder="Company Name" required>
                 <input type="text" name="name" class="form_inputs" placeholder="Title" required>
                 <input type="text" name="name" class="form_inputs Message" placeholder="Message" required>
-                <div class="knopka"><input type="submit" value="Submit" class="primary_btn-light:hover btn submit"></div>
+                <div class="knopka"><input type="submit" value="Submit" class="primary_btn-light:hover btn submit knopka"></div>
             </form>
         </div>
     </div>
