--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -54,7 +54,7 @@
 <div= class="column2">
         <div class="form ">
             <form class="forms_1">
-                <input type="text" name="name" class="form_inputs" placeholder="Name" required>
+                <input type="text" name="name" class="form_inputs name" placeholder="Name" required>
                 <input type="email" name="name" class="form_inputs" placeholder="Email Address" required>
                 <input type="text" name="name" class="form_inputs" placeholder="Company Name" required>
                 <input type="text" name="name" class="form_inputs" placeholder="Title" required>
